--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^12.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
